--- a/SpectrumStories/Info.plist
+++ b/SpectrumStories/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIconName</key>
+	<array>
+		<string>AppIcon</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Coiny-Regular.ttf</string>
